--- a/CmsFui/CmsFui/Views/MainView/SelectCourseContentView.xaml
+++ b/CmsFui/CmsFui/Views/MainView/SelectCourseContentView.xaml
@@ -7,7 +7,7 @@
              xmlns:controls="clr-namespace:CmsFui.Controls;assembly=CmsFui"
              mc:Ignorable="d"
              x:Class="CmsFui.Views.MainView.SelectCourseContentView">
-  <ContentView.Content>
+    <ContentView.Content>
         <StackLayout Padding="20,20,20,40">
             <StackLayout VerticalOptions="StartAndExpand" Margin="0,0,0,20">
                 <Label Text="Select course" VerticalOptions="Center" HorizontalOptions="Center" Style="{DynamicResource PrimaryLabel}" FontFamily="{DynamicResource DefaultLight}"></Label>
@@ -18,6 +18,7 @@
                         RowHeight="100" 
                         x:Name="ListViewCourses"
                         ItemsSource="{Binding Courses}"
+                        ItemSelected="ListViewCourses_OnItemSelected"
                         >
                         <ListView.ItemTemplate>
                             <DataTemplate>
@@ -87,8 +88,8 @@
             <StackLayout VerticalOptions="EndAndExpand" Spacing="20" Margin="0,20,0,0">
                 <border:SfBorder Style="{DynamicResource PrimaryShadowBorder}" HeightRequest="50">
                     <Label Text="Back to the Dashboard" FontSize="18" VerticalOptions="Center" HorizontalOptions="Center" FontFamily="{DynamicResource DefaultRegular}" TextColor="{DynamicResource PrimaryColor}">
-                        
-                    </Label>                    
+
+                    </Label>
                 </border:SfBorder>
             </StackLayout>
         </StackLayout>
