--- a/CmsFui/CmsFui/Views/MainView/AttendanceContentView.xaml
+++ b/CmsFui/CmsFui/Views/MainView/AttendanceContentView.xaml
@@ -13,6 +13,7 @@
             <Label 
                 Text="Attendance"
                 x:Name="LabelCourseName"
+                HorizontalTextAlignment="Center"
                 HorizontalOptions="CenterAndExpand"
                 Style="{DynamicResource PrimaryLabel}"
                 />
