--- a/CmsFui/CmsFui/Views/MainView/ResultContentView.xaml
+++ b/CmsFui/CmsFui/Views/MainView/ResultContentView.xaml
@@ -16,11 +16,14 @@ xmlns:progressBar="clr-namespace:Syncfusion.XForms.ProgressBar;assembly=Syncfusi
                 <border:SfBorder 
                     BorderColor="{DynamicResource PrimaryColor}" 
                     BorderWidth="2"
-                    VerticalOptions="CenterAndExpand"
+                    VerticalOptions="FillAndExpand"
                     CornerRadius="3"
                     >
                     <ScrollView Padding="10">
-                        <ListView RowHeight="90">
+                        <ListView 
+                            RowHeight="90"
+                            x:Name="ListViewResult"
+                            >
                             <ListView.ItemTemplate>
                                 <DataTemplate>
                                     <ViewCell>
@@ -41,7 +44,7 @@ xmlns:progressBar="clr-namespace:Syncfusion.XForms.ProgressBar;assembly=Syncfusi
                                                      >
                                                     <Label 
                                                           Style="{DynamicResource PrimaryLabel}"
-                                                          Text="{Binding}"
+                                                          Text="{Binding Title}"
                                                           VerticalOptions="Center"
                                                           HorizontalOptions="Start"
                                                           FontSize="20"
@@ -50,7 +53,7 @@ xmlns:progressBar="clr-namespace:Syncfusion.XForms.ProgressBar;assembly=Syncfusi
                                                     </Label>
                                                     <Label 
                                                           Style="{DynamicResource PrimaryLabelLight}"
-                                                          Text="{Binding}"
+                                                          Text="{Binding Description}"
                                                           VerticalOptions="Center"
                                                           HorizontalOptions="Start"
                                                           FontSize="15"
@@ -65,7 +68,7 @@ xmlns:progressBar="clr-namespace:Syncfusion.XForms.ProgressBar;assembly=Syncfusi
                                                     <AbsoluteLayout VerticalOptions="CenterAndExpand"
                                                                     HorizontalOptions="End">
                                                         <progressBar:SfCircularProgressBar 
-                                                            Progress="3.8"
+                                                            Progress="{Binding Gpa}"
                                                             Minimum="0"
                                                             Maximum="4"
                                                             ProgressColor="{DynamicResource PrimaryColor}"
@@ -102,7 +105,7 @@ xmlns:progressBar="clr-namespace:Syncfusion.XForms.ProgressBar;assembly=Syncfusi
                                     </ViewCell>
                                 </DataTemplate>
                             </ListView.ItemTemplate>
-                            <ListView.ItemsSource>
+                            <!--<ListView.ItemsSource>
                                 <x:Array Type="{x:Type x:String}">
                                     <x:String>Course Portal</x:String>
                                     <x:String>Register Courses</x:String>
@@ -111,14 +114,13 @@ xmlns:progressBar="clr-namespace:Syncfusion.XForms.ProgressBar;assembly=Syncfusi
                                     <x:String>Fee Challan</x:String>
                                     <x:String>Setting</x:String>
                                 </x:Array>
-                            </ListView.ItemsSource>
+                            </ListView.ItemsSource>-->
                         </ListView>
                     </ScrollView>
                 </border:SfBorder>
             </StackLayout>
             <StackLayout 
-                Spacing="20" 
-                VerticalOptions="EndAndExpand" 
+                Spacing="20"  
                 Margin="0,10,0,0"
                 >
                 <controls:PrimaryButton 
@@ -142,7 +144,13 @@ xmlns:progressBar="clr-namespace:Syncfusion.XForms.ProgressBar;assembly=Syncfusi
                      Style="{DynamicResource LinkLabel}" 
                      Text="Back to the Dashboard" 
                      HorizontalOptions="Center" 
-                     VerticalOptions="Center"></Label>
+                     VerticalOptions="Center">
+                    <Label.GestureRecognizers>
+                        <TapGestureRecognizer 
+                            NumberOfTapsRequired="1"
+                            Tapped="TapGestureRecognizer_OnTapped"></TapGestureRecognizer>
+                    </Label.GestureRecognizers>
+                </Label>
             </StackLayout>
         </StackLayout>
     </ContentView.Content>
